file(GLOB SRC "*.cpp" "*.hpp")
add_library(ch2parse STATIC ${SRC})
target_link_directories(ch2parse PUBLIC "${LLVM_ROOT}/lib")
target_include_directories(ch2parse PUBLIC "${LLVM_ROOT}/include;${CMAKE_CURRENT_SOURCE_DIR};${EXPRTK_INCLUDE_DIRS}")
target_link_libraries(ch2parse PUBLIC ${LIBCLANG_NAME} ch2drv)
